--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <div class="w-48 h-48 sm:w-60 sm:h-60 flex-shrink-0">
                 <!-- UPDATED: New photo link -->
                 <img 
-                    src="https://storage.googleapis.com/maker-me/uploads/uploaded%3ACamScanner_05-27-2025_20.48.13_1%5B1%5D.jpg-6b6d74cd-50fe-4e10-9014-4970bdf159d0" 
-                    alt="Dr. K. Shireesha" 
+                    <img 
+    src="derma..png" 
+    alt="Dr. K. Shireesha" 
+    ...
+>
                     class="w-full h-full rounded-full object-cover border-8 border-white shadow-xl"
                     onerror="this.onerror=null; this.src='https://placehold.co/240x240/E2E8F0/475569?text=Dr.+Shireesha';"
                 >
